[metadata]
name = requests-ip-rotator
version = attr: requests_ip_rotator.__version__
description = Rotate through IPs in Python using AWS API Gateway.
long_description = file: docs/README.md, docs/CHANGELOG.md, docs/LICENSE
url = https://github.com/circlenaut/requests-ip-rotator
author = "George Omnet, Phillip Strefling",
author_email = "pypi@georgeom.net, phillip@strefling.pro",
license = GPLv3+
keywords = requests, ip-rotator, scraper, change-ip
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Archiving
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Internet :: WWW/HTTP

project_urls = 
    Documentation = https://github.com/circlenaut/requests-ip-rotator
    Source = https://github.com/circlenaut/requests-ip-rotator
    Tracker = https://github.com/circlenaut/requests-ip-rotator/issues

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
platforms = any
python_requires = >=3.7, <4
setup_requires =
    setuptools_scm
install_requires =
    boto3
    pydantic
    requests

[bdist_wheel]
universal = 1

[options.packages.find]
where = src
include =
    requests_ip_rotator
    requests_ip_rotator.*

[flake8]
author-attribute = forbidden
no-accept-encodings = True
assertive-snakecase = True
inline-quotes = "
multiline-quotes = """
docstring-quotes = """
application-import-names = requests-ip-rotator
hang_closing = false
doctests = false
max-complexity = 10
exclude =
    .git
    __pycache__
    build
    dist